--- a/package.json
+++ b/package.json
@@ -10,33 +10,42 @@
     "web": "APP_ENV=prod npx expo start --web",
     "format": "node_modules/.bin/prettier --config .prettierrc src/**/*.{ts,tsx} --write",
     "lint": "node_modules/.bin/eslint . --ext .js,.jsx,.ts,.tsx",
-    "test": "node_modules/.bin/jest --verbose --passWithNoTests",
-    "prepare": "husky install"
+    "test": "node_modules/.bin/jest --verbose --passWithNoTests"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/uuid": "^9.0.6",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "^49.0.8",
     "expo-asset": "~8.10.1",
+    "expo-crypto": "~12.4.1",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.4",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.16",
+    "formik": "^2.4.5",
+    "lottie-react-native": "5.1.6",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.1",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
