--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "jsx": "react",
     "strict": true,
     "baseUrl": "./",
     "paths": {
@@ -12,6 +13,10 @@
       "@utils/*": ["./src/utils/*"],
       "@theme": ["./src/theme/index.ts"],
       "@modules/*": ["./src/modules/*"],
+      "@context/*": ["./src/context/*"],
+      "@schema/*": ["./src/schema/*"],
+      "@customTypes/*": ["src/customTypes/*"],
+      "@hooks/*": ["./src/hooks/*"],
     }
   }
 }
