--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.19.6",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
@@ -45,6 +47,7 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
